Fix footer text issue
Fix issue with footer text being too close to the bottom of the page

--- a/css/footer.css
+++ b/css/footer.css
@@ -1,10 +1,10 @@
 .site-footer {
 	background-color: #DBDBDB;
-    height: 30px;
-    width: 100%;
+	width: 100%;
 	font-size: 14px;
 	text-align: center;
 	padding-top: 10px;
+	padding-bottom: 10px;
 	position: fixed;
 	bottom: 0;
 	box-shadow: 0 0 2px 2px rgba(0,0,0,.15);
